@@ -2,8 +2,10 @@ package com.esiitech.monbondocteurv2.config;
 
 import com.esiitech.monbondocteurv2.securite.JwtFiller;
 import com.esiitech.monbondocteurv2.service.CustomUserDetailsService;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
@@ -18,6 +20,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -27,7 +30,9 @@ public class SecurityConfig {
     private final BCryptPasswordEncoder bCryptPasswordEncoder;
     private final JwtFiller jwtFiller;
 
-    public SecurityConfig(CustomUserDetailsService customUserDetailsService, BCryptPasswordEncoder bCryptPasswordEncoder, JwtFiller jwtFiller) {
+    public SecurityConfig(CustomUserDetailsService customUserDetailsService,
+                          BCryptPasswordEncoder bCryptPasswordEncoder,
+                          JwtFiller jwtFiller) {
         this.customUserDetailsService = customUserDetailsService;
         this.bCryptPasswordEncoder = bCryptPasswordEncoder;
         this.jwtFiller = jwtFiller;
@@ -35,42 +40,57 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        return
-                http
-                        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                        .csrf(AbstractHttpConfigurer::disable)
-                        .authorizeHttpRequests(authorize ->
-                                authorize
-                                        .requestMatchers(
-                                                "/api/V2/users/create",
-                                                "/api/V2/users/activation",
-                                                "/swagger-ui/**",
-                                                "/v3/api-docs/**",
-                                                "/api/V2/users/resend-otp",
-                                                "/api/V2/medecins/create",
-                                                "/api/V2/medecins/activation",
-                                                "/api/V2/medecins/resend-otp",
-                                                "/api/V2/structuresanitaires/create",
-                                                "/api/V2/structuresanitaires/all",
-                                                "/api/V2/structuresanitaires/activation",
-                                                "/api/V2/structuresanitaires/resend-otp",
-                                                "/api/V2/auth/**"
-                                        ).permitAll()
-                                        .anyRequest().authenticated()
+        http
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .csrf(AbstractHttpConfigurer::disable)
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint((request, response, authException) -> {
+                            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized");
+                        })
+                )
+                .authorizeHttpRequests(authorize -> authorize
+                        .requestMatchers(
+                                HttpMethod.POST,
+                                "/api/V2/structuresanitaires/create",
+                                "/api/V2/users/create",
+                                "/api/V2/medecins/create"
+                        ).permitAll()
+                        .requestMatchers(
+                                "/api/V2/users/activation",
+                                "/api/V2/users/resend-otp",
+                                "/api/V2/medecins/activation",
+                                "/api/V2/medecins/resend-otp",
+                                "/api/V2/structuresanitaires/all",
+                                "/api/V2/structuresanitaires/delete/{id}",
+                                "/api/V2/structuresanitaires/activation",
+                                "/api/V2/structuresanitaires/resend-otp",
+                                "/api/V2/auth/**",
+                                "/swagger-ui/**",
+                                "/v3/api-docs/**"
+                        ).permitAll()
+                        .anyRequest().authenticated()
+                )
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .addFilterBefore(jwtFiller, UsernamePasswordAuthenticationFilter.class);
 
-                        ).sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                        .addFilterBefore(jwtFiller, UsernamePasswordAuthenticationFilter.class)
-                        .build();
-
+        return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:4200")); // ← frontend autorisé
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList(
+                "http://localhost:4200",
+                "https://monbondocteur.esiitech-gabon.com"
+        ));
+        configuration.setAllowedMethods(Arrays.asList("*"));
+        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Disposition"
+        ));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
@@ -83,14 +103,11 @@ public class SecurityConfig {
         return config.getAuthenticationManager();
     }
 
-
-
     @Bean
     public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
-        provider.setUserDetailsService(customUserDetailsService); // ⬅️ Point clé
+        provider.setUserDetailsService(customUserDetailsService);
         provider.setPasswordEncoder(bCryptPasswordEncoder);
         return provider;
     }
-
 }
